add firewall rule

--- a/shared/ansible/roles/backdoor-nginx/files/login.html
+++ b/shared/ansible/roles/backdoor-nginx/files/login.html
@@ -6,6 +6,6 @@
 <body>
 <h1>Nice try!</h1>
 <p>What are you going to try next?</p>
-<!-- Nothing here :) -->
+<!-- Nothing here, maybe there is another protected route with more interesting stuff :) -->
 </body>
 </html>
